webapps/dog-search/components/Animals/AnimalResults/AnimalResults.module.css
.root {
    /* Grid */
    @apply @grid @grid-cols-12 @gap-4;
    /* Sizing */
    @apply @w-full;
    /* Spacing */
    /* Misc */
    @apply @animate-fadein;
}

.animal-card {
    /* Transition */
    @apply @transition-all @ease-in-out @duration-500 hover:@opacity-50  active:@opacity-25;
    /* Grid Sizing */
    @apply @col-span-6 sm:@col-span-4 lg:@col-span-3;
}

.animal-img {
    @apply @w-full @aspect-square @rounded-b-lg @h-full;
}

.card-title {
    @apply @text-2xl @font-semibold @text-center @p-1;
}

